--- a/Parser/g2.in
+++ b/Parser/g2.in
@@ -1,8 +1,8 @@
 N = declist cmpstmt declaration S
-E = INCEPUT {  }  SFARSIT ; ,
+E = INCEPUT {  }  SFARSIT ; , dec stmt
 S = S
 P =
     S -> INCEPUT { declist } ; { cmpstmt } SFARSIT
     declist -> declaration | declaration , declist
-    declaration -> a
-    cmpstmt -> b
+    declaration -> dec
+    cmpstmt -> stmt
